...
    <string name="play">Gioca</string>
    <string name="title_activity_one_one">ActivityOneOne</string>
    <string name="change_level">Scegli Livello</string>
    <string name="report">Reportistica</string>
    <string name="change_player">Cambia Giocatore</string>
    <string name= "create_account">Crea il tuo giocatore!</string>
    <string name="select_account">Seleziona un giocatore</string>
    <string name="logo">Logo</string>
    <string name="name">Nome</string>
    <string name="birth">Data di nascita</string>
    <string name="ok">OK</string>
    <string name="error_image">L\'immagine scelta è già stata utilizzata da un altro giocatore.\nSelezionane un\'altra! </string>
    <string name="form_button_label">Crea account</string>
    <string name="name_missing">Inserisci il tuo nome per creare l\'account!</string>
    <string name="birth_missing">Inserisci la tua data di nascita per creare l\'account!</string>
    <string name="fields_missing">Inserisci il tuo nome e la tua data di nascita per creare l\'account!</string>
    <string name="progress_title">Progressi:</string>
    <string name="progress_button">Specifiche per livello</string>
    <string name="settings">Impostazioni</string>
    <string name="error_title">Errori:</string>
    <string name="settings_text">Abilita reportistica automatica</string>
<string name="insert">Inserisci qui la tua email:</string>
...
    di tuo figlio, così da poterlo monitorare anche quando non è con te.</string>
    <string name="sharing">Condivisione</string>
    <string name="blocked_level">Questo livello non è stato ancora sbloccato. Continua a giocare per raggiungerlo!</string>
    <string name="enable_nfc">Abilita NFC per iniziare a giocare</string>
    <string name="enable">Abilita</string>

    <string name="slide1">Ciao!\n Mi chiamo Nosco e sarò il tuo nuovo compagno di giochi. </string>
    <string name="slide2"> Lascia che ti spieghi come
    giocare:\navvicina l\'oggetto al lettore NFC del tuo dispositivo per interagire con l\'app.</string>
    <string name="slide3">Troverai tutti i dettagli riguardanti i progressi che faremo insieme nella sezione reportistica.</string>
    <string name="slide4">Fai sapere a tutti quante cose hai imparato condividendo i tuoi progressi con chi vuoi!</string>
    <string name="ingredients">INGREDIENTI</string>
</resources>

