<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slide_background">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/icon_slide"
        android:layout_width="300dp"
        android:layout_height="323dp"
        android:layout_alignEnd="@+id/text_slide"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/text_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="SLIDE 1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        />


</RelativeLayout>