<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polimi.dilapp.main.MainActivity"
    android:background="@drawable/slide_background">

    <android.support.v4.view.ViewPager
        android:id="@+id/slide_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="71dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="Avanti"
        android:visibility="invisible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="634dp" />

</RelativeLayout>
