...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_land"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_red_vector" />


    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeImage"
        android:layout_marginTop="60dp"
        android:layout_centerVertical="true"
        android:fontFamily="@font/carter_one"
...
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccount"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true">

    <LinearLayout
        android:id="@+id/listOfAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageButton
        android:layout_width="150dp"
...
