...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/avatar"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginVertical="50dp"
...
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text=""
        />

...
        android:layout_height="wrap_content"
        android:text="@string/birth"
        android:layout_marginHorizontal="50dp"
        />

    <EditText
        android:id="@+id/edit_birth"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text=""
        />

    <Button
        android:id="@+id/form_button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimaryDark"
        android:paddingStart="20dp"
...
