<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/lightblue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/error_image"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/close"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        android:textColor="@color/white" />

</RelativeLayout>